--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.0"
   },
@@ -20,9 +21,10 @@
     "@vue/cli-service": "~5.0.0-rc.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14",
+    "node-sass": "^6.0.1",
     "sass": "^1.44.0",
-    "sass-loader": "^12.3.0"
+    "sass-loader": "^12.3.0",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
